--- a/app/posts/markdown.css
+++ b/app/posts/markdown.css
@@ -5,6 +5,7 @@
 .md-content
   :is(p, pre, blockquote, .highlight, .katex-display, h1, h2, h3, h4, h5, h6) {
   margin: 1rem 0;
+  overflow-x: auto;
 }
 
 .md-content blockquote {
